# athomesoftware

./: .gitignore  CITATIONS.md  DEPENDENCIES.md  README.md  capture.py  catkin_setup.sh  install_deps.sh  install_talos_dependencies.sh  install_unsupervised_dataset.sh  read.me
ArduinoSpammer/: ArduinoSpammer.ino
ai_framework/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
arm/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
audio/: 8986.dic  8986.sent  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  follow_me_cmds.launch  setup.py
base_diagnostic_tools/: capture.py  process_messages.sh  read.me
emergency_stop/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
navigation/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  package.xml
remote_control/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
scripts/: find_talos_ip.sh  follow_me_challenge.launch  start_robot.sh  start_sensors.sh
sensors/: CMakeCache.txt  CTestTestfile.cmake  DEPENDENCIES  Makefile  cmake_install.cmake  package.xml
talos_audio/: 8986.lm  CMakeLists.txt  min.sent  package.xml
talos_control/: CMakeLists.txt  package.xml
talos_description/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  package.xml  read.me
talos_diagnostics/: CMakeLists.txt  aggregator.launch  package.xml  talos_analyzers.yaml
talos_documentation/: CITATIONS.md  coding_practices.txt
talos_follower/: CTestTestfile.cmake  Makefile  cmake_install.cmake  package.xml
talos_follower_2014-03-01/: CMakeLists.txt
talos_machinelearning/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  package.xml
talos_mechanism_controllers/talos_base_controller/: CMakeLists.txt  CTestTestfile.cmake  Makefile  base.launch  cmake_install.cmake  debug.txt  package.xml  read.me
talos_mechanism_controllers/talos_base_controller/catkin_generated/: package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py
talos_mechanism_controllers/talos_base_controller/catkin_generated/installspace/: talos_base_controller.pc  talos_base_controllerConfig.cmake
talos_mechanism_controllers/talos_base_controller/extra/ArduinoCode/Base_Controller_Arduino_Code/: Base_Controller_Arduino_Code.ino
talos_mechanism_controllers/talos_base_controller/extra/ArduinoCode/SerialComm/: parser.h
talos_mechanism_controllers/talos_base_controller/extra/extras/libraries/: add_libraries_to_arduino.sh
talos_mechanism_controllers/talos_base_controller/extra/extras/libraries/BaseMotorControl/: BaseMotorControl.cpp  BaseMotorControl.h  basemtrcontrol.cpp  basemtrcontrol.h
talos_mechanism_controllers/talos_base_controller/extra/extras/libraries/BaseMotorControl/tests/: Makefile
talos_mechanism_controllers/talos_base_controller/extra/extras/libraries/PID_v1/: PID_v1.cpp
talos_mechanism_controllers/talos_base_controller/extra/extras/libraries/PID_v10/: PID_v1.cpp  PID_v1.h  keywords.txt
talos_mechanism_controllers/talos_base_controller/extra/extras/libraries/PID_v1_custom/: PID_v1_custom.cpp
talos_mechanism_controllers/talos_base_controller/extra/extras/libraries/SerialComm/: keywords.txt  parser.cpp
talos_mechanism_controllers/talos_base_controller/include/talos_base_controller/: ArduinoMessage.h  odometry_manager.h  parser.h
talos_mechanism_controllers/talos_base_controller/libs/: CTestTestfile.cmake  Makefile  cmake_install.cmake  odometry_manager.cc  odometry_manager.h
talos_mechanism_controllers/talos_base_controller/src/: base_controller_node.cpp  odometry_manager.cc  parser.cpp
talos_mechanism_controllers/talos_base_controller/test/: odometry_manager_test.cc  parser_test.cpp
talos_navigation/: CMakeLists.txt  CTestTestfile.cmake  Makefile  README.txt  amcl_diff.launch  cmake_install.cmake  costmap_common_params.yaml  frames.gv  global_costmap_params.yaml  local_costmap_params.yaml  package.xml  start_wireless_ps3_controller.sh
talos_os/: CMakeLists.txt  main_state_machine.py  package.xml  setup.py
talos_scripts/: README  git_login_devon.sh  git_login_michael.sh  start_sensors.sh
talos_sensors/: CMakeLists.txt  DEPENDENCIES  package.xml
talos_speech/: CMakeLists.txt  package.xml
talos_teleop/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  package.xml  read.me  talos_teleop.launch
talos_vision/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
tbots_navigation/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
tmp/: capture.py
turtlebot_follower/: CMakeCache.txt  CTestTestfile.cmake  (+2 more)
(+530 files in other folders)
